<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <item
        android:id="@+id/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="always"
        android:title="@string/edit"
        android:titleCondensed="Add">
    </item>
    
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_navigation_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"
        android:titleCondensed="Add">
    </item>
    
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/ic_action_search_holo_light"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"/>
</menu>