<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       <ScrollView
      android:id="@+id/scroller"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.11"
        
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/ipad_button_green"
            android:text="@string/price"
            android:onClick="goToDseList"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/ipad_button_green"
            android:text="@string/indexes"
            android:onClick="goToDseIndexes"
            android:textStyle="bold" />

        

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/ipad_button_green"
            android:text="@string/record_date"
            android:onClick="goToRecordDateDse"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/ipad_button_green"
            android:text="@string/news"
            android:onClick="goToNewsListDse"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/ipad_button_green"
            android:text="@string/my_favorite"
            android:onClick="goToDseFav"
            android:textStyle="bold" />

    </LinearLayout>
    
    </ScrollView>

</LinearLayout>