<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <LinearLayout
        android:id="@+id/price_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"

        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/company_name_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:layout_marginLeft="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/dividend"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dividend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sp" />

        </LinearLayout>
        
        
        
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/agm_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/agm_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sp" />

        </LinearLayout>
        
         
         
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView002"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/record_date_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/record_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sp" />

        </LinearLayout>

       
        
    </LinearLayout>

</LinearLayout>