<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    
    <ImageView 
        android:id="@+id/up_down_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:src="@drawable/abs__ic_go_search_api_holo_light"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/price_information"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/company_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/percent_change_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="123%" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high" />

            <TextView
                android:id="@+id/high_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/low" />

            <TextView
                android:id="@+id/low_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp" /> -->

        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/ltp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/ltp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="3dip"
            android:layout_marginTop="5dip"
            android:textStyle="bold|italic" />

    </LinearLayout>

</LinearLayout>