<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_gradient_background"
    tools:context=".DseIndexesActivity" >

    
    <ScrollView
      android:id="@+id/scroller"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <WebView
            android:id="@+id/webView1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="206.18" />

        <WebView
            android:id="@+id/webView2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="5dip" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.88"
            android:text="@string/dsex_index"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <WebView
            android:id="@+id/cse30_index"
            android:layout_width="match_parent"
            android:layout_height="160dip"
            android:layout_weight="583.31" />

        <Button
            android:id="@+id/btn1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:layout_gravity="right"
            android:layout_margin="5dip"
            android:background="@drawable/simple_gradient_background"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/view_large" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dgen_index"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <WebView
            android:id="@+id/cscx_index"
            android:layout_width="match_parent"
            android:layout_height="160dip" />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:layout_gravity="right"
            android:layout_margin="5dip"
            android:background="@drawable/simple_gradient_background"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/view_large" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ds30_index"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <WebView
            android:id="@+id/caspi_index"
            android:layout_width="match_parent"
            android:layout_height="160dip" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:layout_gravity="right"
            android:layout_margin="5dip"
            android:background="@drawable/simple_gradient_background"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/view_large" />

    </LinearLayout>
    
    
    </ScrollView>

</RelativeLayout>